--- a/index.html
+++ b/index.html
@@ -1,17 +1,328 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fruit Burst</title>
-</head>
-<body>
+<html lang="en" data-theme="light">
 
-    <header>
-        <nav>
-            
-        </nav>
-    </header>
-    
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Fruit Burst</title>
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://kit.fontawesome.com/a6c23814c2.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <nav id="navbar" class="bg-red-600 m-4 flex">
+    <div class="font-semibold text-lg mx-3 flex space-x-12 p-6 text-white">
+      <a href="">Home</a>
+      <a href="">About Us</a>
+      <a href="">Shop</a>
+      <a href="">All Fruits</a>
+    </div>
+    <div id="logo" class="flex justify-center">
+      <img src="/images/logo.png" alt="">
+      <p class="text-lg text-white font-semibold">Fruits Burst</p>
+    </div>
+    <div class="">
+      <div class="form-control">
+        <div>
+          <input type="text" placeholder="Search" class="input input-bordered w-24 md:w-auto" />
+        </div>
+        <div>
+          <i class="fa-solid fa-magnifying-glass text-red absolute "></i>
+        </div>
+        <!-- <div class="">
+                    <div class="py-8 pr-12">
+                        <input type="text" placeholder="Search here"
+                            class="input input-bordered rounded-full md:w-auto" />
+                    </div>
+                </div> -->
+      </div>
+      <div></div>
+    </div>
+  </nav>
+  <section class="m-4">
+    <div class="carousel w-full">
+      <div id="slide1" class="carousel-item relative w-full">
+        <img src="/images/banner1.png" class="w-full" />
+        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+          <a href="#slide4" class="btn btn-circle">❮</a>
+          <a href="#slide2" class="btn btn-circle">❯</a>
+        </div>
+      </div>
+      <div id="slide2" class="carousel-item relative w-full">
+        <img src="/images/banner1.png" class="w-full" />
+        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+          <a href="#slide1" class="btn btn-circle">❮</a>
+          <a href="#slide3" class="btn btn-circle">❯</a>
+        </div>
+      </div>
+      <div id="slide3" class="carousel-item relative w-full">
+        <img src="/images/banner1.png" class="w-full" />
+        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+          <a href="#slide2" class="btn btn-circle">❮</a>
+          <a href="#slide4" class="btn btn-circle">❯</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="px-5">
+    <div class="flex justify-between">
+      <div>
+        <p>Deal of the day</p>
+        <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin
+          literature from 45 BC, making it over 2000 years old.</p>
+      </div>
+      <div>
+        <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
+          <div class="flex flex-col">
+            <span class="countdown font-mono text-5xl">
+              <span style="--value:15;"></span>
+            </span>
+            days
+          </div>
+          <div class="mt-3">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+              <path
+                d="M12 6.75C11.8011 6.75 11.6103 6.67098 11.4697 6.53033C11.329 6.38968 11.25 6.19891 11.25 6C11.25 5.80109 11.329 5.61032 11.4697 5.46967C11.6103 5.32902 11.8011 5.25 12 5.25C12.1989 5.25 12.3897 5.32902 12.5303 5.46967C12.671 5.61032 12.75 5.80109 12.75 6C12.75 6.19891 12.671 6.38968 12.5303 6.53033C12.3897 6.67098 12.1989 6.75 12 6.75ZM12 12.75C11.8011 12.75 11.6103 12.671 11.4697 12.5303C11.329 12.3897 11.25 12.1989 11.25 12C11.25 11.8011 11.329 11.6103 11.4697 11.4697C11.6103 11.329 11.8011 11.25 12 11.25C12.1989 11.25 12.3897 11.329 12.5303 11.4697C12.671 11.6103 12.75 11.8011 12.75 12C12.75 12.1989 12.671 12.3897 12.5303 12.5303C12.3897 12.671 12.1989 12.75 12 12.75ZM12 18.75C11.8011 18.75 11.6103 18.671 11.4697 18.5303C11.329 18.3897 11.25 18.1989 11.25 18C11.25 17.8011 11.329 17.6103 11.4697 17.4697C11.6103 17.329 11.8011 17.25 12 17.25C12.1989 17.25 12.3897 17.329 12.5303 17.4697C12.671 17.6103 12.75 17.8011 12.75 18C12.75 18.1989 12.671 18.3897 12.5303 18.5303C12.3897 18.671 12.1989 18.75 12 18.75Z"
+                stroke="#121212" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+          </div>
+          <div class="flex flex-col">
+            <span class="countdown font-mono text-5xl">
+              <span style="--value:10;"></span>
+            </span>
+            hours
+          </div>
+          <div class="mt-3">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+              <path
+                d="M12 6.75C11.8011 6.75 11.6103 6.67098 11.4697 6.53033C11.329 6.38968 11.25 6.19891 11.25 6C11.25 5.80109 11.329 5.61032 11.4697 5.46967C11.6103 5.32902 11.8011 5.25 12 5.25C12.1989 5.25 12.3897 5.32902 12.5303 5.46967C12.671 5.61032 12.75 5.80109 12.75 6C12.75 6.19891 12.671 6.38968 12.5303 6.53033C12.3897 6.67098 12.1989 6.75 12 6.75ZM12 12.75C11.8011 12.75 11.6103 12.671 11.4697 12.5303C11.329 12.3897 11.25 12.1989 11.25 12C11.25 11.8011 11.329 11.6103 11.4697 11.4697C11.6103 11.329 11.8011 11.25 12 11.25C12.1989 11.25 12.3897 11.329 12.5303 11.4697C12.671 11.6103 12.75 11.8011 12.75 12C12.75 12.1989 12.671 12.3897 12.5303 12.5303C12.3897 12.671 12.1989 12.75 12 12.75ZM12 18.75C11.8011 18.75 11.6103 18.671 11.4697 18.5303C11.329 18.3897 11.25 18.1989 11.25 18C11.25 17.8011 11.329 17.6103 11.4697 17.4697C11.6103 17.329 11.8011 17.25 12 17.25C12.1989 17.25 12.3897 17.329 12.5303 17.4697C12.671 17.6103 12.75 17.8011 12.75 18C12.75 18.1989 12.671 18.3897 12.5303 18.5303C12.3897 18.671 12.1989 18.75 12 18.75Z"
+                stroke="#121212" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+          </div>
+          <div class="flex flex-col">
+            <span class="countdown font-mono text-5xl">
+              <span style="--value:24;"></span>
+            </span>
+            min
+          </div>
+          <div class="mt-3">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+              <path
+                d="M12 6.75C11.8011 6.75 11.6103 6.67098 11.4697 6.53033C11.329 6.38968 11.25 6.19891 11.25 6C11.25 5.80109 11.329 5.61032 11.4697 5.46967C11.6103 5.32902 11.8011 5.25 12 5.25C12.1989 5.25 12.3897 5.32902 12.5303 5.46967C12.671 5.61032 12.75 5.80109 12.75 6C12.75 6.19891 12.671 6.38968 12.5303 6.53033C12.3897 6.67098 12.1989 6.75 12 6.75ZM12 12.75C11.8011 12.75 11.6103 12.671 11.4697 12.5303C11.329 12.3897 11.25 12.1989 11.25 12C11.25 11.8011 11.329 11.6103 11.4697 11.4697C11.6103 11.329 11.8011 11.25 12 11.25C12.1989 11.25 12.3897 11.329 12.5303 11.4697C12.671 11.6103 12.75 11.8011 12.75 12C12.75 12.1989 12.671 12.3897 12.5303 12.5303C12.3897 12.671 12.1989 12.75 12 12.75ZM12 18.75C11.8011 18.75 11.6103 18.671 11.4697 18.5303C11.329 18.3897 11.25 18.1989 11.25 18C11.25 17.8011 11.329 17.6103 11.4697 17.4697C11.6103 17.329 11.8011 17.25 12 17.25C12.1989 17.25 12.3897 17.329 12.5303 17.4697C12.671 17.6103 12.75 17.8011 12.75 18C12.75 18.1989 12.671 18.3897 12.5303 18.5303C12.3897 18.671 12.1989 18.75 12 18.75Z"
+                stroke="#121212" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+          </div>
+          <div class="flex flex-col">
+            <span class="countdown font-mono text-5xl">
+              <span style="--value:25;"></span>
+            </span>
+            sec
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="flex justify-center">
+      <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-20">
+
+        <div>
+          <div>
+            <img src="/images/fruit6.png" alt="">
+            <p>12.90$ - 18.85$</p>
+            <p>Apple</p>
+          </div>
+          <div class="rating rating-md rating-half">
+            <input type="radio" name="rating-10" class="rating-hidden" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-1" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-2" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-1" checked />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-2" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-1" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-2" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-1" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-2" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-1" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-2" />
+          </div>
+        </div>
+  
+        <div>
+          <div>
+            <img src="/images/fruit6.png" alt="">
+            <p>12.90$ - 18.85$</p>
+            <p>Apple</p>
+          </div>
+          <div class="rating rating-md rating-half">
+            <input type="radio" name="rating-10" class="rating-hidden" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-1" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-2" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-1" checked />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-2" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-1" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-2" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-1" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-2" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-1" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-2" />
+          </div>
+        </div>
+  
+        <div>
+          <div>
+            <img src="/images/fruit6.png" alt="">
+            <p>12.90$ - 18.85$</p>
+            <p>Apple</p>
+          </div>
+          <div class="rating rating-md rating-half">
+            <input type="radio" name="rating-10" class="rating-hidden" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-1" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-2" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-1" checked />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-2" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-1" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-2" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-1" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-2" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-1" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-2" />
+          </div>
+        </div>
+  
+        <div>
+          <div>
+            <img src="/images/fruit6.png" alt="">
+            <p>12.90$ - 18.85$</p>
+            <p>Apple</p>
+          </div>
+          <div class="rating rating-md rating-half">
+            <input type="radio" name="rating-10" class="rating-hidden" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-1" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-2" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-1" checked />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-2" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-1" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-2" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-1" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-2" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-1" />
+            <input type="radio" name="rating-10" class="bg-green-500 mask mask-star-2 mask-half-2" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+  <section class="meet-section">
+    <div class="text-center mt-10 mb-5 p-5">
+      <h1 class="mb-2 text-gray-100 text-4xl font-semibold">Meet the team</h1>
+      <h2 class="text-gray-50 font-normal text-lg mt-10">Contrary to popular belief, is not simply random text. It has
+        roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</h2>
+    </div>
+    <div class="flex justify-center pb-28">
+      <div class="grid sm:grid-cols-1 lg:grid-cols-4 gap-20">
+        <div>
+          <div class="avatar">
+            <div class="w-24 rounded-full ring ring-primary ring-offset-base-100 ring-offset-2">
+              <img src="/images/member1.png" />
+            </div>
+          </div>
+          <div>
+            <p class="text-lg text-white font-semibold">Awlad Hossain</p>
+          </div>
+          <div>
+            <p>Fruits Expert</p>
+          </div>
+          <div class="text-red-600 text-2xl">
+            <i id="footer-icon-size" class="fa-brands fa-facebook"></i>
+            <i id="footer-icon-size" class="fa-brands fa-twitter"></i>
+            <i id="footer-icon-size" class="fa-brands fa-linkedin"></i>
+          </div>
+        </div>
+        <div>
+          <div class="avatar">
+            <div class="w-24 rounded-full ring ring-primary ring-offset-base-100 ring-offset-2">
+              <img src="/images/member1.png" />
+            </div>
+          </div>
+          <div>
+            <p>Awlad Hossain</p>
+          </div>
+          <div>
+            <p>Fruits Expert</p>
+          </div>
+          <div class="text-red-600 text-2xl">
+            <i id="footer-icon-size" class="fa-brands fa-facebook"></i>
+            <i id="footer-icon-size" class="fa-brands fa-twitter"></i>
+            <i id="footer-icon-size" class="fa-brands fa-linkedin"></i>
+          </div>
+        </div>
+        <div>
+          <div class="avatar">
+            <div class="w-24 rounded-full ring ring-primary ring-offset-base-100 ring-offset-2">
+              <img src="/images/member1.png" />
+            </div>
+          </div>
+          <div>
+            <p>Awlad Hossain</p>
+          </div>
+          <div>
+            <p>Fruits Expert</p>
+          </div>
+          <div class="text-red-600 text-2xl">
+            <i id="footer-icon-size" class="fa-brands fa-facebook"></i>
+            <i id="footer-icon-size" class="fa-brands fa-twitter"></i>
+            <i id="footer-icon-size" class="fa-brands fa-linkedin"></i>
+          </div>
+        </div>
+        <div>
+          <div class="avatar">
+            <div class="w-24 rounded-full ring ring-primary ring-offset-base-100 ring-offset-2">
+              <img src="/images/member1.png" />
+            </div>
+          </div>
+          <div>
+            <p>Awlad Hossain</p>
+          </div>
+          <div>
+            <p>Fruits Expert</p>
+          </div>
+          <div class="text-red-600 text-2xl">
+            <i id="footer-icon-size" class="fa-brands fa-facebook"></i>
+            <i id="footer-icon-size" class="fa-brands fa-twitter"></i>
+            <i id="footer-icon-size" class="fa-brands fa-linkedin"></i>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+  </section>
+  <footer class="bg-black mx-auto mt-10">
+    <div class="flex justify-center">
+      <img src="/images/logo.png" alt="">
+      <p class="text-white mt-5 ml-3 font-medium">Fruit Burst</p>
+    </div>
+    <div class="flex justify-center text-white font-mono mt-8 gap-5">
+      <a href="">Home</a>
+      <a href="">About Us</a>
+      <a href="">Shop</a>
+      <a href="">All Fruits</a>
+      <a href="">Support</a>
+      <a href="">My Account</a>
+    </div>
+    <div class="flex justify-center text-white text-3xl mt-8 gap-5 pb-5">
+      <i id="footer-icon-size" class="fa-brands fa-twitter"></i>
+      <i id="footer-icon-size" class="fa-brands fa-facebook"></i>
+      <i id="footer-icon-size" class="fa-brands fa-youtube"></i>
+      <i id="footer-icon-size" class="fa-brands fa-linkedin"></i>
+      <i id="footer-icon-size" class="fa-brands fa-instagram"></i>
+      <i id="footer-icon-size" class="fa-brands fa-apple"></i>
+    </div>
+  </footer>
 </body>
+
 </html>
