--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           <div
             class="relative xl:pt-[100px] py-28 xl:py-0 xl:pb-[200px] rounded-lg"
             style="
-              background-image: url(./images/banner1.png);
+              background-image: url(./images/banner2.png);
               background-repeat: no-repeat;
             "
           >
@@ -209,6 +209,69 @@
               </button>
             </div>
           </div>
+
+
+
+          <div
+            class="relative xl:pt-[100px] py-28 xl:py-0 xl:pb-[200px] rounded-lg"
+            style="
+              background-image: url(./images/banner3.png);
+              background-repeat: no-repeat;
+            "
+          >
+            <div class="max-w-[661px] mx-auto text-center">
+              <h2
+                class="text-white font-[800] md:text-[72px] text-[45px] md:leading-[86px]"
+              >
+                Exotic tastes at your doorstep
+              </h2>
+              <small class="text-white font-medium text-xl leading-[24px]"
+                >We supply highly quality organic products</small
+              >
+              <br />
+              <button
+                class="bg-[#F85559] text-white w-[154px] md:h-[64px] h-[50px] rounded-lg mt-5 md:text-xl text-base font-bold"
+              >
+                Shop Now
+              </button>
+            </div>
+          </div>
+
+
+
+
+
+
+
+          <div
+            class="relative xl:pt-[100px] py-28 xl:py-0 xl:pb-[200px] rounded-lg"
+            style="
+              background-image: url(./images/banner4.png);
+              background-repeat: no-repeat;
+            "
+          >
+            <div class="max-w-[661px] mx-auto text-center">
+              <h2
+                class="text-white font-[800] md:text-[72px] text-[45px] md:leading-[86px]"
+              >
+                Exotic tastes at your doorstep
+              </h2>
+              <small class="text-white font-medium text-xl leading-[24px]"
+                >We supply highly quality organic products</small
+              >
+              <br />
+              <button
+                class="bg-[#F85559] text-white w-[154px] md:h-[64px] h-[50px] rounded-lg mt-5 md:text-xl text-base font-bold"
+              >
+                Shop Now
+              </button>
+            </div>
+          </div>
+
+
+
+
+
         </div>
         <div
           class="mx-auto max-w-[1196px] w-full bg-white xl:absolute xl:-bottom-16 xl:left-1/2 xl:-translate-x-1/2 rounded-lg shadow-lg py-3 px-5 md:grid lg:grid-cols-5 md:grid-cols-3 hidden z-50"
