--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Fruit Bast</title>
-  <!-- tailwind adn daisy ui -->
+  <title>Fruit Burst</title>
   <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- lato google font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet" />
+
   <link rel="icon" type="image/x-icon" href="./images/logo.png" />
+
+
   <!-- Slick carousel -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
     integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
@@ -22,19 +20,10 @@
     integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="https://kit.fontawesome.com/a6c23814c2.js" crossorigin="anonymous"></script>
-  <!-- tailwind-custom-color -->
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            clifford: "#da373d",
-          },
 
-        },
-      },
-    };
-  </script>
+
+
+
   <style>
     .owl-theme .owl-nav {
       display: block !important;
@@ -124,7 +113,7 @@
     </div>
   </header>
   <main>
-    <!-- Banner -->
+    <!-- Banner part -->
     <section class="max-w-[1440px] w-full px-3 mx-auto xl:mt-20 mt-0 relative">
       <div class="owl-carousel owl-theme">
         <div class="relative xl:pt-[100px] py-28 xl:py-0 xl:pb-[200px] rounded-lg" style="
@@ -249,7 +238,7 @@
           </p>
         </div>
 
-        <!-- time bar -->
+        <!-- Counter -->
         <div class="grid grid-flow-col gap-5 text-centerauto-cols-max">
           <div class="flex flex-col">
             <span class="countdown font-extrabold md:text-5xl text-3xl text-green-600">
@@ -281,7 +270,7 @@
 
     <section class="max-w-[1440px] w-full px-3 mx-auto mt-20">
       <div class="grid lg:grid-cols-4 md:grid-cols-2 grid-cols-1 gap-6">
-        <!-- card-1 -->
+        <!-- card Number1 -->
         <div class="card bg-gray-400">
           <figure class="px-10 pt-10">
             <img src="./images/fruit6.png" alt="Apple" class="rounded-xl" />
@@ -329,7 +318,7 @@
                   </div>
                 </div>
                 <div class="modal-action justify-center gap-5">
-                  <!-- if there is a button, it will close the modal -->
+
                   <button class="btn btn-warning">Close</button>
                   <button class="btn btn-success">Buy Now</button>
                 </div>
@@ -338,7 +327,7 @@
           </div>
         </div>
 
-        <!-- card-2 -->
+        <!-- card number2 -->
         <div class="card bg-red-200">
           <figure class="px-10 pt-10">
             <img src="./images/fruit7.png" alt="Orange" class="rounded-xl" />
@@ -386,7 +375,7 @@
                   </div>
                 </div>
                 <div class="modal-action justify-center gap-5">
-                  <!-- if there is a button, it will close the modal -->
+
                   <button class="btn btn-warning">Close</button>
                   <button class="btn btn-success">Buy Now</button>
                 </div>
@@ -395,7 +384,7 @@
           </div>
         </div>
 
-        <!-- card-3 -->
+        <!-- card number3 -->
         <div class="card bg-neutral-400">
           <figure class="px-10 pt-10">
             <img src="./images/fruit8.png" alt="Apple" class="rounded-xl" />
@@ -445,7 +434,7 @@
                   </div>
                 </div>
                 <div class="modal-action justify-center gap-5">
-                  <!-- if there is a button, it will close the modal -->
+
                   <button class="btn btn-warning">Close</button>
                   <button class="btn btn-success">Buy Now</button>
                 </div>
@@ -454,7 +443,7 @@
           </div>
         </div>
 
-        <!-- card-4 -->
+        <!-- card number4 -->
         <div class="card bg-yellow-100">
           <figure class="px-10 pt-10">
             <img src="./images/fruit9.png" alt="Banana" class="rounded-xl" />
@@ -502,7 +491,6 @@
                   </div>
                 </div>
                 <div class="modal-action justify-center gap-5">
-                  <!-- if there is a button, it will close the modal -->
                   <button class="btn btn-warning">Close</button>
                   <button class="btn btn-success">Buy Now</button>
                 </div>
@@ -517,7 +505,7 @@
         </button>
       </div>
     </section>
-    <!-- team section -->
+    <!-- Meet the team -->
     <section style="
           background-image: linear-gradient(
               rgba(0, 0, 0, 0.7),
