--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         class="mx-auto max-w-[1196px] w-full bg-white xl:absolute xl:-bottom-16 xl:left-1/2 xl:-translate-x-1/2 rounded-lg shadow-lg py-3 px-5 md:grid lg:grid-cols-5 md:grid-cols-3 hidden z-50">
         <div class="text-center">
           <img src="./images/fruit1.png" alt="img" class="w-[114px] h-[114px] object-contain mx-auto" />
-          <p class="text-lg font-medium text-[#121212CC]">Strawberry</p>
+          <p class="text-lg font-medium text-[#121212CC]">Graps</p>
         </div>
         <div class="text-center">
           <img src="./images/fruit2.png" alt="img" class="w-[114px] h-[114px] object-contain mx-auto" />
@@ -212,7 +212,7 @@
         </div>
         <div class="text-center">
           <img src="./images/fruit3.png" alt="img" class="w-[114px] h-[114px] object-contain mx-auto" />
-          <p class="text-lg font-medium text-[#121212CC]">Strawberry</p>
+          <p class="text-lg font-medium text-[#121212CC]">Mango</p>
         </div>
         <div class="text-center">
           <img src="./images/fruit4.png" alt="img" class="w-[114px] h-[114px] object-contain mx-auto" />
@@ -220,7 +220,7 @@
         </div>
         <div class="text-center">
           <img src="./images/fruit5.png" alt="img" class="w-[114px] h-[114px] object-contain mx-auto" />
-          <p class="text-lg font-medium text-[#121212CC]">Mango</p>
+          <p class="text-lg font-medium text-[#121212CC]">Pomegranate</p>
         </div>
       </div>
     </section>
@@ -228,7 +228,7 @@
     <section class="max-w-[1440px] w-full px-3 mx-auto pt-36">
       <div class="flex lg:flex-row flex-col justify-between">
         <div>
-          <h3 class="pb-6 font-extrabold md:text-5xl text-3xl text-red-500">
+          <h3 class="pb-6 font-semibold md:text-4xl text-3xl text-red-500">
             Deal of the day
           </h3>
           <p class="font-medium text-xs text-gray-900 pb-12">
@@ -241,25 +241,25 @@
         <!-- Counter -->
         <div class="grid grid-flow-col gap-5 text-centerauto-cols-max">
           <div class="flex flex-col">
-            <span class="countdown font-extrabold md:text-5xl text-3xl text-green-600">
+            <span class="countdown font-semibold md:text-4xl text-3xl text-green-600">
               <span style="--value: 10"></span>:
             </span>
             <p class="font-medium text-xs text-yellow-800">Days</p>
           </div>
           <div class="flex flex-col">
-            <span class="countdown font-extrabold md:text-5xl text-3xl text-green-600">
+            <span class="countdown font-semibold md:text-4xl text-3xl text-green-600">
               <span style="--value: 12"></span>:
             </span>
             <p class="font-medium text-xs text-yellow-800">Hours</p>
           </div>
           <div class="flex flex-col">
-            <span class="countdown font-extrabold md:text-5xl text-3xl text-green-600">
+            <span class="countdown font-semibold md:text-4xl text-3xl text-green-600">
               <span style="--value: 27"></span>:
             </span>
             <p class="font-medium text-xs text-yellow-800">Minutes</p>
           </div>
           <div class="flex flex-col">
-            <span class="countdown font-extrabold md:text-5xl text-3xl text-green-600">
+            <span class="countdown font-semibold md:text-4xl text-3xl text-green-600">
               <span style="--value: 00"></span>
             </span>
             <p class="font-medium text-xs text-yellow-800">Seconds</p>
