--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 <body class="font-lato">
   <header
-    class="relative xl:bg-[#F85559] max-w-[1440px] w-full px-3 h-[120px] rounded-full mx-auto flex justify-between items-center py-[10px] xl:px-5 px-0 xl:mt-[40px] mt-0">
+    class="relative xl:bg-[#034a05] max-w-[1440px] w-full px-3 h-[120px] rounded-full mx-auto flex justify-between items-center py-[10px] xl:px-5 px-0 xl:mt-[40px] mt-0">
     <!-- For Desktop -->
     <ul class="hidden xl:flex items-center space-x-5">
       <li>
